--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Inline_block_model</title>
+	<title>All in one</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<section class="conteiner top">
 		<!----------------- Line 1 ----------------->
-		<div class="fs0 background1">
-			<div class="inline_block fs35 w400_h400 hiden">
+		<div class="background1 clear">
+			<div class="float fs35 w400_h400 hiden">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae!</p>
 			</div>
-			<div class="inline_block fs35 w400_h400 hiden">
+			<div class="float fs35 w400_h400 hiden">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae! </p>
 			</div>
-			<div class="inline_block fs35 w400_h400 hiden">
+			<div class="float fs35 w400_h400 hiden">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -35,8 +35,8 @@
 			</div>
 		</div>
 		<!----------------- Line 2 ----------------->
-		<div class="fs0 background2">
-			<div class="inline_block fs35">
+		<div class="clear background2">
+			<div class="float fs35">
 				<div class="w800_h200 hiden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
 					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
 					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
@@ -48,7 +48,7 @@
 					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
 					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
 			</div>
-			<div class="inline_block fs35">
+			<div class="float fs35">
 				<div class="w400_h133 hiden">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
@@ -76,15 +76,15 @@
 			</div>
 		</div>
 		<!----------------- Line 3 ----------------->
-		<div class="fs0 background3">
-			<div class="inline_block fs35 middle w400_h400 hiden">
+		<div class="background3 clear">
+			<div class="float fs35 middle w400_h400 hiden">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae!</p>
 			</div>
-			<div class="inline_block fs35 middle">
+			<div class="float fs35 middle">
 				<div class="w800_h200 hiden">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
@@ -93,8 +93,8 @@
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="fs0 hiden">
-					<div class="inline_block fs35 middle w400_h200">
+				<div class="hiden clear">
+					<div class="float fs35 middle w400_h200">
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 							doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 							earum
@@ -104,7 +104,7 @@
 							nam,
 							quos totam eos quae!</p>
 					</div>
-					<div class="inline_block fs35 middle">
+					<div class="float fs35 middle">
 						<div class="w400_h100 hiden">
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
