--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-	<section class="conteiner top">
+<body class="mondrian">
+	<section class="sq_conteiner top">
 		<!----------------- Line 1 ----------------->
-		<div class="background1 clear">
-			<div class="float fs35 w400_h400 hiden">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+		<div class="background1 flex flex_arrange outline">
+			<div class="fs35 w400_h400 hiden outline">
+				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae!</p>
+					quos totam eos quae!</p class="paragraph">
 			</div>
-			<div class="float fs35 w400_h400 hiden">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+			<div class="fs35 w400_h400 hiden outline">
+				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae! </p>
 			</div>
-			<div class="float fs35 w400_h400 hiden">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+			<div class="fs35 w400_h400 hiden outline">
+				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
@@ -35,38 +35,38 @@
 			</div>
 		</div>
 		<!----------------- Line 2 ----------------->
-		<div class="clear background2">
-			<div class="float fs35">
-				<div class="w800_h200 hiden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
+		<div class="flex background2 outline outline">
+			<div class="fs35 outline">
+				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
 					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
 					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
 					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
 					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
-				<div class="w800_h200 hiden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
+				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
 					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
 					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
 					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
 					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
 			</div>
-			<div class="float fs35">
-				<div class="w400_h133 hiden">
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+			<div class="fs35 outline outline">
+				<div class="w400_h133 hiden outline">
+					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="w400_h133 hiden">
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<div class="w400_h133 hiden outline">
+					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="w400_h133 hiden">
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<div class="w400_h133 hiden outline">
+					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
@@ -76,26 +76,26 @@
 			</div>
 		</div>
 		<!----------------- Line 3 ----------------->
-		<div class="background3 clear">
-			<div class="float fs35 middle w400_h400 hiden">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+		<div class="flex background3 outline">
+			<div class="fs35 middle w400_h400 hiden outline">
+				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae!</p>
 			</div>
-			<div class="float fs35 middle">
-				<div class="w800_h200 hiden">
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+			<div class="fs35 middle outline">
+				<div class="w800_h200 hiden outline">
+					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="hiden clear">
-					<div class="float fs35 middle w400_h200">
-						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<div class="flex hiden outline">
+					<div class="fs35 middle w400_h200 outline">
+						<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 							doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 							earum
 							dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur
@@ -104,9 +104,9 @@
 							nam,
 							quos totam eos quae!</p>
 					</div>
-					<div class="float fs35 middle">
-						<div class="w400_h100 hiden">
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
+					<div class="fs35 middle outline">
+						<div class="w400_h100 hiden outline">
+							<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 								earum
@@ -116,8 +116,8 @@
 								omnis nam,
 								quos totam eos quae!</p>
 						</div>
-						<div class="w400_h100 hiden">
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
+						<div class="w400_h100 hiden outline">
+							<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 								earum
@@ -128,7 +128,6 @@
 								quos totam eos quae! </p>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
