Table and Position Models

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="mondrian">
-	<section class="sq_conteiner top">
+	<section class="conteiner p_middle top">
 		<!----------------- Line 1 ----------------->
 		<div class="background1 flex flex_arrange outline">
 			<div class="fs35 w400_h400 hiden outline">
