--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 		<!----------------- Line 1 ----------------->
 		<div class="background1 flex flex_arrange outline">
 			<div class="fs35 w400_h400 hiden outline">
-				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae!</p class="paragraph">
+					quos totam eos quae!</p>
 			</div>
 			<div class="fs35 w400_h400 hiden outline">
-				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae! </p>
 			</div>
 			<div class="fs35 w400_h400 hiden outline">
-				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
@@ -50,7 +50,7 @@
 			</div>
 			<div class="fs35 outline outline">
 				<div class="w400_h133 hiden outline">
-					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
@@ -58,7 +58,7 @@
 						quos totam eos quae!</p>
 				</div>
 				<div class="w400_h133 hiden outline">
-					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
@@ -66,7 +66,7 @@
 						quos totam eos quae!</p>
 				</div>
 				<div class="w400_h133 hiden outline">
-					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
@@ -78,7 +78,7 @@
 		<!----------------- Line 3 ----------------->
 		<div class="flex background3 outline">
 			<div class="fs35 middle w400_h400 hiden outline">
-				<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
@@ -86,7 +86,7 @@
 			</div>
 			<div class="fs35 middle outline">
 				<div class="w800_h200 hiden outline">
-					<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
@@ -95,7 +95,7 @@
 				</div>
 				<div class="flex hiden outline">
 					<div class="fs35 middle w400_h200 outline">
-						<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
+						<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 							doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 							earum
 							dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur
@@ -106,7 +106,7 @@
 					</div>
 					<div class="fs35 middle outline">
 						<div class="w400_h100 hiden outline">
-							<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
+							<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 								earum
@@ -117,7 +117,7 @@
 								quos totam eos quae!</p>
 						</div>
 						<div class="w400_h100 hiden outline">
-							<p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
+							<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 								earum
