--- a/table.html
+++ b/table.html
@@ -10,9 +10,9 @@
 
 <body class="background4">
 	<!-- Table  -->
-	<div class="text_center">
+	<div class="text_center m_top">
 		<h3 class="text_bold fs35">Table practice</h3>
-		<table class="table p_middle">
+		<table class="table p_middle m_top">
 			<colgroup>
 				<col>
 				<col class="background5">
