--- a/dark_side.html
+++ b/dark_side.html
@@ -10,7 +10,7 @@
 
 <body class="dark_side blackout">
 	<header class="header">
-		<p class="gl_conteiner red_mode"><a href="index.html">Star Wars Saga</a></p>
+		<p class="gl_conteiner red_mode"><a href="gallery.html">Star Wars Saga</a></p>
 	</header>
 	<main>
 		<div class="cards gl_conteiner">
