--- a/float.html
+++ b/float.html
@@ -11,22 +11,22 @@
 <body>
 	<section class="conteiner p_middle top">
 		<!----------------- Line 1 ----------------->
-		<div class="background1 clear">
-			<div class="float fs35 w400_h400 hiden">
+		<div class="background1 clear outline h_400">
+			<div class="float fs35 w400_h400 hiden outline">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae!</p>
 			</div>
-			<div class="float fs35 w400_h400 hiden">
+			<div class="float fs35 w400_h400 hiden outline">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae! </p>
 			</div>
-			<div class="float fs35 w400_h400 hiden">
+			<div class="float fs35 w400_h400 hiden outline">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -35,21 +35,21 @@
 			</div>
 		</div>
 		<!----------------- Line 2 ----------------->
-		<div class="clear background2">
-			<div class="float fs35">
-				<div class="w800_h200 hiden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
+		<div class="clear background2 outline h_400">
+			<div class="float fs35 outline">
+				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
 					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
 					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
 					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
 					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
-				<div class="w800_h200 hiden">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
+				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
 					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
 					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
 					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
 					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
 			</div>
-			<div class="float fs35">
-				<div class="w400_h133 hiden">
+			<div class="float fs35 outline">
+				<div class="w400_h133 hiden outline">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -57,7 +57,7 @@
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="w400_h133 hiden">
+				<div class="w400_h133 hiden outline">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -65,7 +65,7 @@
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="w400_h133 hiden">
+				<div class="w400_h133 hiden outline">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -76,16 +76,16 @@
 			</div>
 		</div>
 		<!----------------- Line 3 ----------------->
-		<div class="background3 clear">
-			<div class="float fs35 middle w400_h400 hiden">
+		<div class="background3 clear outline h_400">
+			<div class="float fs35 middle w400_h400 hiden outline">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
 					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
 					quos totam eos quae!</p>
 			</div>
-			<div class="float fs35 middle">
-				<div class="w800_h200 hiden">
+			<div class="float fs35 middle outline">
+				<div class="w800_h200 hiden outline">
 					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
 						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
@@ -93,8 +93,8 @@
 						nam,
 						quos totam eos quae!</p>
 				</div>
-				<div class="hiden clear">
-					<div class="float fs35 middle w400_h200">
+				<div class="hiden clear outline">
+					<div class="float fs35 middle w400_h200 outline">
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
 							doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
 							earum
@@ -104,8 +104,8 @@
 							nam,
 							quos totam eos quae!</p>
 					</div>
-					<div class="float fs35 middle">
-						<div class="w400_h100 hiden">
+					<div class="float fs35 middle outline">
+						<div class="w400_h100 hiden outline">
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
@@ -116,7 +116,7 @@
 								omnis nam,
 								quos totam eos quae!</p>
 						</div>
-						<div class="w400_h100 hiden">
+						<div class="w400_h100 hiden outline">
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
 								rerum
 								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
