--- a/index.html
+++ b/index.html
@@ -8,130 +8,40 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="mondrian">
-	<section class="conteiner p_middle top">
-		<!----------------- Line 1 ----------------->
-		<div class="background1 flex flex_arrange outline">
-			<div class="fs35 w400_h400 hiden outline">
-				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae!</p>
+<body class="main_body">
+	<header>
+		<div class="mp_header conteiner p_middle p15_15">
+			<div class="logo_box">
+				<a class="logo" href="">MyPage</a>
 			</div>
-			<div class="fs35 w400_h400 hiden outline">
-				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae! </p>
-			</div>
-			<div class="fs35 w400_h400 hiden outline">
-				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae!</p>
-			</div>
+
+			<ul class="mp_nav_list">
+				<li class="nav_item"><a href="#">Main page</a></li>
+				<li class="nav_item"><a href="gallery.html">Gallery</a></li>
+				<li class="nav_item home_work"><a href="#">Home works</a>
+					<ul class="mp_nav_list_2">
+						<li><a href="table.html">Table</a></li>
+						<li><a href="inline_block.html">Inline-Block</a></li>
+						<li><a href="float.html">Float</a></li>
+						<li class="layouts"><a href="#">Layout</a>
+							<ul class="mp_nav_list_3">
+								<li><a href="flex.html">Flex</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
+
+			<ul class="my_social">
+				<li class="my_social_item"><a href="#"><img src="img/social//my_page/facebook-176-svgrepo-com.svg" alt=""
+							width="38" height="38"></a></li>
+				<li class="my_social_item"><a href="#"><img src="img/social/my_page/instagram-svgrepo-com.svg" alt=""
+							width="49" height="49"></a></li>
+				<li class="my_social_item"><a href="#"><img src="img/social/my_page/git-repository-svgrepo-com.svg" alt=""
+							width="49" height="49"></a></li>
+			</ul>
 		</div>
-		<!----------------- Line 2 ----------------->
-		<div class="flex background2 outline outline">
-			<div class="fs35 outline">
-				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
-					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
-					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
-					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
-				<div class="w800_h200 hiden outline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam,
-					assumenda cum adipisci rerum doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi
-					omnis similique tempore earum dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Eos sunt pariatur neque dicta numquam at. Optio possimus maxime, temporibus commodi illum
-					provident! Voluptates eaque omnis nam, quos totam eos quae!</div>
-			</div>
-			<div class="fs35 outline outline">
-				<div class="w400_h133 hiden outline">
-					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
-						nam,
-						quos totam eos quae!</p>
-				</div>
-				<div class="w400_h133 hiden outline">
-					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
-						nam,
-						quos totam eos quae!</p>
-				</div>
-				<div class="w400_h133 hiden outline">
-					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
-						nam,
-						quos totam eos quae!</p>
-				</div>
-			</div>
-		</div>
-		<!----------------- Line 3 ----------------->
-		<div class="flex background3 outline">
-			<div class="fs35 middle w400_h400 hiden outline">
-				<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-					doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-					dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-					dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis nam,
-					quos totam eos quae!</p>
-			</div>
-			<div class="fs35 middle outline">
-				<div class="w800_h200 hiden outline">
-					<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-						doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore earum
-						dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur neque
-						dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
-						nam,
-						quos totam eos quae!</p>
-				</div>
-				<div class="flex hiden outline">
-					<div class="fs35 middle w400_h200 outline">
-						<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci rerum
-							doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
-							earum
-							dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur
-							neque
-							dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque omnis
-							nam,
-							quos totam eos quae!</p>
-					</div>
-					<div class="fs35 middle outline">
-						<div class="w400_h100 hiden outline">
-							<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
-								rerum
-								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
-								earum
-								dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur
-								neque
-								dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque
-								omnis nam,
-								quos totam eos quae!</p>
-						</div>
-						<div class="w400_h100 hiden outline">
-							<p class="text_justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nam, assumenda cum adipisci
-								rerum
-								doloremque odit est illo deserunt quibusdam ipsa atque numquam excepturi omnis similique tempore
-								earum
-								dignissimos voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt pariatur
-								neque
-								dicta numquam at. Optio possimus maxime, temporibus commodi illum provident! Voluptates eaque
-								omnis nam,
-								quos totam eos quae! </p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	</header>
 </body>
 
 </html>
