--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</li>
 			</ul>
 
-			<ul class="my_social">
+			<ul class="my_social_list">
 				<li class="my_social_item"><a href="#"><img src="img/social//my_page/facebook-176-svgrepo-com.svg" alt=""
 							width="38" height="38"></a></li>
 				<li class="my_social_item"><a href="#"><img src="img/social/my_page/instagram-svgrepo-com.svg" alt=""
